--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Slides for MA336 Statistics"
-# author: "Fei Ye <br/> Department of Mathematics and Computer Science"
 date: "Fall 2023"
 output:
   markdown::html_format
@@ -13,3 +12,5 @@ output:
 - [Topic 2: Summarizing Data Graphically](Topic-2-Graphical-Descriptions.html)
 
 - [Topic 3: Summarizing Data Numerically](Topic-3-Numercial-Descriptions.html)
+
+- [Topic 4: Linear Relationship](Topic-4-Linear-Relationship.html)
